--- a/become-a-host/welcome.html
+++ b/become-a-host/welcome.html
@@ -193,7 +193,7 @@
                                   ></div>
                                  </div>
                                 </span>
-                                <span class="_bc4egv">dsadasdas</span>
+                                <span class="flex-1">dsadasdas</span>
                                 <span class="_12s5d6w">
                                  <svg
                                   viewBox="0 0 32 32"
@@ -227,7 +227,7 @@
                                   <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/pictures/893cb7b3-6902-4c92-b136-235afe5511da.jpg'); background-size: cover; border-radius: 8px;"></div>
                                  </div>
                                 </span>
-                                <span class="_bc4egv">Your Apartment listing started October 21, 2022</span>
+                                <span class="flex-1">Your Apartment listing started October 21, 2022</span>
                                 <span class="_12s5d6w">
                                  <svg
                                   viewBox="0 0 32 32"
@@ -261,7 +261,7 @@
                                   <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/pictures/893cb7b3-6902-4c92-b136-235afe5511da.jpg'); background-size: cover; border-radius: 8px;"></div>
                                  </div>
                                 </span>
-                                <span class="_bc4egv">Your Apartment listing</span>
+                                <span class="flex-1">Your Apartment listing</span>
                                 <span class="_12s5d6w">
                                  <svg
                                   viewBox="0 0 32 32"
@@ -299,7 +299,7 @@
                                   <path d="m2 16h28m-14-14v28"></path>
                                  </svg>
                                 </span>
-                                <span class="_bc4egv">Create a new listing</span>
+                                <span class="flex-1">Create a new listing</span>
                                 <span class="_12s5d6w">
                                  <svg
                                   viewBox="0 0 32 32"
@@ -325,7 +325,7 @@
                                   ></path>
                                  </svg>
                                 </span>
-                                <span class="_bc4egv">Duplicate an existing listing</span>
+                                <span class="flex-1">Duplicate an existing listing</span>
                                 <span class="_12s5d6w">
                                  <svg
                                   viewBox="0 0 32 32"
@@ -452,7 +452,7 @@
                     ></div>
                    </div>
                   </span>
-                  <span class="_bc4egv">dsadasdas</span>
+                  <span class="flex-1">dsadasdas</span>
                   <span class="_12s5d6w">
                    <svg
                     viewBox="0 0 32 32"
@@ -486,7 +486,7 @@
                     <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/pictures/893cb7b3-6902-4c92-b136-235afe5511da.jpg'); background-size: cover; border-radius: 8px;"></div>
                    </div>
                   </span>
-                  <span class="_bc4egv">Your Apartment listing started October 21, 2022</span>
+                  <span class="flex-1">Your Apartment listing started October 21, 2022</span>
                   <span class="_12s5d6w">
                    <svg
                     viewBox="0 0 32 32"
@@ -520,7 +520,7 @@
                     <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/pictures/893cb7b3-6902-4c92-b136-235afe5511da.jpg'); background-size: cover; border-radius: 8px;"></div>
                    </div>
                   </span>
-                  <span class="_bc4egv">Your Apartment listing</span>
+                  <span class="flex-1">Your Apartment listing</span>
                   <span class="_12s5d6w">
                    <svg
                     viewBox="0 0 32 32"
@@ -611,7 +611,7 @@
                    <h3 class="_bt0ez1">Aug 16, 2022</h3>
                    <div class="_1w193fh">
                     <div class="_1f6woba">
-                     <div class="_bc4egv">
+                     <div class="flex-1">
                       <div data-testid="base-registry-wrapper-spacing" style="margin: 16px 34px 10px 22px;">
                        <div class="relative">
                         <div>
@@ -648,7 +648,7 @@
                   >
                    <div class="_1w193fh">
                     <div class="_1f6woba">
-                     <div class="_bc4egv">
+                     <div class="flex-1">
                       <div data-testid="base-registry-wrapper-spacing" style="margin: 20px 34px 10px 22px;">
                        <div class="_x2h9fxk">
                         <div class="_1v3ycqn">
@@ -830,7 +830,7 @@
                    <h3 class="_bt0ez1">Aug 16, 2022</h3>
                    <div class="_1w193fh">
                     <div class="_1f6woba">
-                     <div class="_bc4egv">
+                     <div class="flex-1">
                       <div data-testid="base-registry-wrapper-spacing" style="margin: 16px 34px 10px 22px;">
                        <div class="relative">
                         <div>
@@ -867,7 +867,7 @@
                   >
                    <div class="_1w193fh">
                     <div class="_pcw78nw">
-                     <div class="_bc4egv">
+                     <div class="flex-1">
                       <div data-testid="base-registry-wrapper-spacing" style="margin: 20px 34px 10px 22px;">
                        <div class="_x2h9fxk">
                         <div class="_1v3ycqn">
@@ -1059,7 +1059,7 @@
                    <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/user/5438063d-f035-43c0-b9da-59eb0ff20b8f.jpg?aki_policy=profile_x_medium'); background-size: cover; border-radius: 50%;"></div>
                   </div>
                  </span>
-                 <span class="_bc4egv">
+                 <span class="flex-1">
                   <div class="_f9uxok">Message Myrna</div>
                   <div class="_1cecj8q">Get personalized answers from this experienced Host</div>
                  </span>
