--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -147,7 +147,7 @@
                                 data-veloute="marketing_section_landing_page_full_row_image"
                               >
                                 <div class="_1x9rd38">
-                                  <div class="_bc4egv">
+                                  <div class="flex-1">
                                     <div
                                       class="_13rz9t0"
                                       style="margin-left: 0; margin-right: 0"
@@ -1198,7 +1198,7 @@ Harlem, New York City"
                                 data-veloute="marketing_section_landing_page_full_row_image"
                               >
                                 <div class="_1x9rd38">
-                                  <div class="_bc4egv">
+                                  <div class="flex-1">
                                     <div
                                       class="_13rz9t0"
                                       style="margin-left: 0; margin-right: 0"
@@ -1263,7 +1263,7 @@ Harlem, New York City"
                                 data-veloute="marketing_section_landing_page_text_column"
                               >
                                 <div class="_1x9rd38">
-                                  <div class="_bc4egv">
+                                  <div class="flex-1">
                                     <div class="_13rz9t0">
                                       <div class="margin__bottom-24">
                                         <div
@@ -1342,7 +1342,7 @@ Harlem, New York City"
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_bc4egv">
+                                  <div class="flex-1">
                                     <div class="_13rz9t0">
                                       <div class="margin__bottom-24">
                                         <div
@@ -1416,7 +1416,7 @@ Harlem, New York City"
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_bc4egv">
+                                  <div class="flex-1">
                                     <div class="_13rz9t0">
                                       <div class="margin__bottom-24">
                                         <div
@@ -1749,7 +1749,7 @@ Harlem, New York City"
                                 data-veloute="marketing_section_landing_page_text_column"
                               >
                                 <div class="_1x9rd38">
-                                  <div class="_bc4egv">
+                                  <div class="flex-1">
                                     <div class="_13rz9t0">
                                       <div data-nosnippet="true">
                                         <section>
@@ -1778,7 +1778,7 @@ Harlem, New York City"
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_bc4egv">
+                                  <div class="flex-1">
                                     <div class="_13rz9t0">
                                       <div data-nosnippet="true">
                                         <section>
