--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -11059,7 +11059,7 @@
                                                                               <div role="group" class="_1m4zger"
                                                                                 aria-labelledby="GuestPicker-book_it-form-adults"
                                                                                 aria-describedby="GuestPicker-book_it-form-adults-subtitle">
-                                                                                <div class="_bc4egv">
+                                                                                <div class="flex-1">
                                                                                   <div
                                                                                     id="GuestPicker-book_it-form-adults"
                                                                                     class="_1ynrq4v">Adults</div>
@@ -11110,7 +11110,7 @@
                                                                               <div role="group" class="_1m4zger"
                                                                                 aria-labelledby="GuestPicker-book_it-form-children"
                                                                                 aria-describedby="GuestPicker-book_it-form-children-subtitle">
-                                                                                <div class="_bc4egv">
+                                                                                <div class="flex-1">
                                                                                   <div
                                                                                     id="GuestPicker-book_it-form-children"
                                                                                     class="_1ynrq4v">Children</div>
@@ -11161,7 +11161,7 @@
                                                                               <div role="group" class="_1m4zger"
                                                                                 aria-labelledby="GuestPicker-book_it-form-infants"
                                                                                 aria-describedby="GuestPicker-book_it-form-infants-subtitle">
-                                                                                <div class="_bc4egv">
+                                                                                <div class="flex-1">
                                                                                   <div
                                                                                     id="GuestPicker-book_it-form-infants"
                                                                                     class="_1ynrq4v">Infants</div>
@@ -11212,7 +11212,7 @@
                                                                               <div role="group" class="_1m4zger"
                                                                                 aria-labelledby="GuestPicker-book_it-form-pets"
                                                                                 aria-describedby="GuestPicker-book_it-form-pets-subtitle">
-                                                                                <div class="_bc4egv">
+                                                                                <div class="flex-1">
                                                                                   <div
                                                                                     id="GuestPicker-book_it-form-pets"
                                                                                     class="_1ynrq4v">Pets</div>
