--- a/listings-product/specific_trip.html
+++ b/listings-product/specific_trip.html
@@ -6365,7 +6365,7 @@
                                               <h3 class="_bt0ez1">Sep 15, 2022</h3>
                                               <div class="_1w193fh">
                                                 <div class="_1f6woba">
-                                                  <div class="_bc4egv">
+                                                  <div class="flex-1">
                                                     <div data-testid="base-registry-wrapper-spacing" style="margin: 10px 34px 10px 22px;">
                                                       <div class="_x2h9fxk">
                                                         <div class="_1k62s0t6">
@@ -6407,7 +6407,7 @@
                                             <div tabindex="-1" role="group" data-item-id="13221908356" aria-label="Airbnb Support sent Do you need help with this reservation?. Sent Sep 15, 2022, 12:32 AM" class="_c015vz2">
                                               <div class="_1w193fh">
                                                 <div class="_1f6woba">
-                                                  <div class="_bc4egv">
+                                                  <div class="flex-1">
                                                     <div data-testid="base-registry-wrapper-spacing" style="margin: 16px 34px 10px 70px;">
                                                       <div class="carousel-slider__item-wrap">
                                                         <div>
@@ -6432,7 +6432,7 @@
                                             <div tabindex="-1" role="group" data-item-id="13221908373" aria-label="Airbnb Support sent A message titled Cooking Deep Fried Bright Orange Battered Eggs and one action. Sent Sep 15, 2022, 12:32 AM" class="_c015vz2">
                                               <div class="_1w193fh">
                                                 <div class="_1f6woba">
-                                                  <div class="_bc4egv">
+                                                  <div class="flex-1">
                                                     <div data-testid="base-registry-wrapper-spacing" style="margin: 16px 34px 10px 70px;">
                                                       <div class="carousel-slider__item-wrap">
                                                         <div><a target="_blank" aria-label="" href="/experience_reservation/TA4MSHAM" class="_rksv9lh">
@@ -6482,7 +6482,7 @@
                                             <div tabindex="-1" role="group" data-item-id="13221908398" aria-label="Airbnb Support sent A message where you have selected I need help with something else. Sent Sep 15, 2022, 12:32 AM" class="_c015vz2">
                                               <div class="_1w193fh">
                                                 <div class="_1f6woba">
-                                                  <div class="_bc4egv">
+                                                  <div class="flex-1">
                                                     <div data-testid="base-registry-wrapper-spacing" style="margin: 16px 34px 10px 70px;">
                                                       <div class="carousel-slider__item-wrap">
                                                         <div>
@@ -6516,7 +6516,7 @@
                                             <div tabindex="-1" role="group" data-item-id="13222024483" aria-label="Jose Angelo sent I need help with something else. Sent Sep 15, 2022, 12:46 AM" class="_c015vz2">
                                               <div class="_1w193fh">
                                                 <div class="_1f6woba">
-                                                  <div class="_bc4egv">
+                                                  <div class="flex-1">
                                                     <div data-testid="base-registry-wrapper-spacing" style="margin: 20px 34px 10px 22px;">
                                                       <div class="_x2h9fxk">
                                                         <div class="_1v3ycqn"><button tabindex="-1" aria-hidden="true" aria-label="User profile image" data-testid="message-thread-profile-link" type="button" class="_1pl8jcir">
@@ -6556,7 +6556,7 @@
                                             <div tabindex="-1" role="group" data-item-id="13222024716" aria-label="Airbnb Support sent Can you describe your issue in a few sentences? This will help our team understand what’s going on. ..Please don’t include sensitive info like credit card numbers.. Sent Sep 15, 2022, 12:46 AM" class="_c015vz2">
                                               <div class="_1w193fh">
                                                 <div class="_1f6woba">
-                                                  <div class="_bc4egv">
+                                                  <div class="flex-1">
                                                     <div data-testid="base-registry-wrapper-spacing" style="margin: 20px 34px 10px 22px;">
                                                       <div class="_x2h9fxk">
                                                         <div class="_1k62s0t6">
