--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -8026,7 +8026,7 @@
                         <div class="_1y5b6gl">
                           <div role="group" class="_1m4zger" aria-labelledby="wishlistGuestPicker-adults"
                             aria-describedby="wishlistGuestPicker-adults-subtitle">
-                            <div class="_bc4egv">
+                            <div class="flex-1">
                               <div id="wishlistGuestPicker-adults" class="_1ynrq4v">Adults</div>
                               <div id="wishlistGuestPicker-adults-subtitle" class="_1wh7hnv"></div>
                             </div>
@@ -8056,7 +8056,7 @@
                         <div class="_1estb9n">
                           <div role="group" class="_1m4zger" aria-labelledby="wishlistGuestPicker-children"
                             aria-describedby="wishlistGuestPicker-children-subtitle">
-                            <div class="_bc4egv">
+                            <div class="flex-1">
                               <div id="wishlistGuestPicker-children" class="_1ynrq4v">Children</div>
                               <div id="wishlistGuestPicker-children-subtitle" class="_1wh7hnv"></div>
                             </div>
@@ -8086,7 +8086,7 @@
                         <div class="_1estb9n">
                           <div role="group" class="_1m4zger" aria-labelledby="wishlistGuestPicker-infants"
                             aria-describedby="wishlistGuestPicker-infants-subtitle">
-                            <div class="_bc4egv">
+                            <div class="flex-1">
                               <div id="wishlistGuestPicker-infants" class="_1ynrq4v">Infants</div>
                               <div id="wishlistGuestPicker-infants-subtitle" class="_1wh7hnv"></div>
                             </div>
@@ -8947,7 +8947,7 @@
               <div class="_1y5b6gl">
                 <div role="group" class="_1m4zger" aria-labelledby="wishlistGuestPicker-adults"
                   aria-describedby="wishlistGuestPicker-adults-subtitle">
-                  <div class="_bc4egv">
+                  <div class="flex-1">
                     <div id="wishlistGuestPicker-adults" class="_1ynrq4v">Adults</div>
                     <div id="wishlistGuestPicker-adults-subtitle" class="_1wh7hnv"></div>
                   </div>
@@ -8976,7 +8976,7 @@
               <div class="_1estb9n">
                 <div role="group" class="_1m4zger" aria-labelledby="wishlistGuestPicker-children"
                   aria-describedby="wishlistGuestPicker-children-subtitle">
-                  <div class="_bc4egv">
+                  <div class="flex-1">
                     <div id="wishlistGuestPicker-children" class="_1ynrq4v">Children</div>
                     <div id="wishlistGuestPicker-children-subtitle" class="_1wh7hnv"></div>
                   </div>
@@ -9006,7 +9006,7 @@
               <div class="_1estb9n">
                 <div role="group" class="_1m4zger" aria-labelledby="wishlistGuestPicker-infants"
                   aria-describedby="wishlistGuestPicker-infants-subtitle">
-                  <div class="_bc4egv">
+                  <div class="flex-1">
                     <div id="wishlistGuestPicker-infants" class="_1ynrq4v">Infants</div>
                     <div id="wishlistGuestPicker-infants-subtitle" class="_1wh7hnv"></div>
                   </div>
@@ -9797,7 +9797,7 @@
               <div class="_1y5b6gl">
                 <div role="group" class="_1m4zger" aria-labelledby="wishlistGuestPicker-adults"
                   aria-describedby="wishlistGuestPicker-adults-subtitle">
-                  <div class="_bc4egv">
+                  <div class="flex-1">
                     <div id="wishlistGuestPicker-adults" class="_1ynrq4v">Adults</div>
                     <div id="wishlistGuestPicker-adults-subtitle" class="_1wh7hnv"></div>
                   </div>
@@ -9826,7 +9826,7 @@
               <div class="_1estb9n">
                 <div role="group" class="_1m4zger" aria-labelledby="wishlistGuestPicker-children"
                   aria-describedby="wishlistGuestPicker-children-subtitle">
-                  <div class="_bc4egv">
+                  <div class="flex-1">
                     <div id="wishlistGuestPicker-children" class="_1ynrq4v">Children</div>
                     <div id="wishlistGuestPicker-children-subtitle" class="_1wh7hnv"></div>
                   </div>
@@ -9856,7 +9856,7 @@
               <div class="_1estb9n">
                 <div role="group" class="_1m4zger" aria-labelledby="wishlistGuestPicker-infants"
                   aria-describedby="wishlistGuestPicker-infants-subtitle">
-                  <div class="_bc4egv">
+                  <div class="flex-1">
                     <div id="wishlistGuestPicker-infants" class="_1ynrq4v">Infants</div>
                     <div id="wishlistGuestPicker-infants-subtitle" class="_1wh7hnv"></div>
                   </div>
