--- a/become-a-host/amenities.html
+++ b/become-a-host/amenities.html
@@ -13290,7 +13290,7 @@
                    <h3 class="_bt0ez1">Aug 16, 2022</h3>
                    <div class="_1w193fh">
                     <div class="_1f6woba">
-                     <div class="_bc4egv">
+                     <div class="flex-1">
                       <div data-testid="base-registry-wrapper-spacing" style="margin: 16px 34px 10px 22px;">
                        <div class="relative">
                         <div>
@@ -13327,7 +13327,7 @@
                   >
                    <div class="_1w193fh">
                     <div class="_1f6woba">
-                     <div class="_bc4egv">
+                     <div class="flex-1">
                       <div data-testid="base-registry-wrapper-spacing" style="margin: 20px 34px 10px 22px;">
                        <div class="_x2h9fxk">
                         <div class="_1v3ycqn">
@@ -13510,7 +13510,7 @@
                    <h3 class="_bt0ez1">Aug 16, 2022</h3>
                    <div class="_1w193fh">
                     <div class="_1f6woba">
-                     <div class="_bc4egv">
+                     <div class="flex-1">
                       <div data-testid="base-registry-wrapper-spacing" style="margin: 16px 34px 10px 22px;">
                        <div class="relative">
                         <div>
@@ -13547,7 +13547,7 @@
                   >
                    <div class="_1w193fh">
                     <div class="_pcw78nw">
-                     <div class="_bc4egv">
+                     <div class="flex-1">
                       <div data-testid="base-registry-wrapper-spacing" style="margin: 20px 34px 10px 22px;">
                        <div class="_x2h9fxk">
                         <div class="_1v3ycqn">
