--- a/become-a-host/floor-plan.html
+++ b/become-a-host/floor-plan.html
@@ -692,7 +692,7 @@
                    <h3 class="_bt0ez1">Aug 16, 2022</h3>
                    <div class="_1w193fh">
                     <div class="_1f6woba">
-                     <div class="_bc4egv">
+                     <div class="flex-1">
                       <div data-testid="base-registry-wrapper-spacing" style="margin: 16px 34px 10px 22px;">
                        <div class="relative">
                         <div>
@@ -729,7 +729,7 @@
                   >
                    <div class="_1w193fh">
                     <div class="_1f6woba">
-                     <div class="_bc4egv">
+                     <div class="flex-1">
                       <div data-testid="base-registry-wrapper-spacing" style="margin: 20px 34px 10px 22px;">
                        <div class="_x2h9fxk">
                         <div class="_1v3ycqn">
@@ -911,7 +911,7 @@
                    <h3 class="_bt0ez1">Aug 16, 2022</h3>
                    <div class="_1w193fh">
                     <div class="_1f6woba">
-                     <div class="_bc4egv">
+                     <div class="flex-1">
                       <div data-testid="base-registry-wrapper-spacing" style="margin: 16px 34px 10px 22px;">
                        <div class="relative">
                         <div>
@@ -948,7 +948,7 @@
                   >
                    <div class="_1w193fh">
                     <div class="_pcw78nw">
-                     <div class="_bc4egv">
+                     <div class="flex-1">
                       <div data-testid="base-registry-wrapper-spacing" style="margin: 20px 34px 10px 22px;">
                        <div class="_x2h9fxk">
                         <div class="_1v3ycqn">
@@ -1140,7 +1140,7 @@
                    <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/user/5438063d-f035-43c0-b9da-59eb0ff20b8f.jpg?aki_policy=profile_x_medium'); background-size: cover; border-radius: 50%;"></div>
                   </div>
                  </span>
-                 <span class="_bc4egv">
+                 <span class="flex-1">
                   <div class="_f9uxok">Message Myrna</div>
                   <div class="_1cecj8q">Get personalized answers from this experienced Host</div>
                  </span>
