--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -6447,7 +6447,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                     <div class="_bp34sw">
                                                       <div class="_1x0jb4k">
                                                         <div class="_u92pyy">
-                                                          <div class="_bc4egv" data-testid="experiences-change-dates">
+                                                          <div class="flex-1" data-testid="experiences-change-dates">
                                                             <button aria-expanded="false" type="button" class="_11eqlma4">
                                                               <div class="_1athds8">
                                                                 <div>
@@ -7086,7 +7086,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                               fill="#FFF"></path>
                                                                           </g>
                                                                         </svg></div>
-                                                                      <div class="_bc4egv">Continue with Facebook</div>
+                                                                      <div class="flex-1">Continue with Facebook</div>
                                                                       <div class="_fvfsqm"></div>
                                                                     </div>
                                                                   </button></form>
@@ -7116,7 +7116,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                             <path d="M0 0h18v18H0V0z"></path>
                                                                           </g>
                                                                         </svg></div>
-                                                                      <div class="_bc4egv">Continue with Google</div>
+                                                                      <div class="flex-1">Continue with Google</div>
                                                                       <div class="_fvfsqm"></div>
                                                                     </div>
                                                                   </button></form>
@@ -7135,7 +7135,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                             d="m13.3 2.1a5.1 5.1 0 0 1 3.8-2.1 5.1 5.1 0 0 1 -1.2 3.8 4.1 4.1 0 0 1 -3.6 1.7 4.5 4.5 0 0 1 1-3.4zm-5 3.7c-2.8 0-5.8 2.5-5.8 7.3 0 4.9 3.5 10.9 6.3 10.9 1 0 2.5-1 4-1s2.6.9 4 .9c3.1 0 5.3-6.4 5.3-6.4a5.3 5.3 0 0 1 -3.2-4.9 5.2 5.2 0 0 1 2.6-4.5 5.4 5.4 0 0 0 -4.7-2.4c-2 0-3.5 1.1-4.3 1.1-.9 0-2.4-1-4.2-1z">
                                                                           </path>
                                                                         </svg></div>
-                                                                      <div class="_bc4egv">Continue with Apple</div>
+                                                                      <div class="flex-1">Continue with Apple</div>
                                                                       <div class="_fvfsqm"></div>
                                                                     </div>
                                                                   </button></form>
@@ -7149,7 +7149,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                           d="m22.5 4h-21c-.83 0-1.5.67-1.5 1.51v12.99c0 .83.67 1.5 1.5 1.5h20.99a1.5 1.5 0 0 0 1.51-1.51v-12.98c0-.84-.67-1.51-1.5-1.51zm.5 14.2-6.14-7.91 6.14-4.66v12.58zm-.83-13.2-9.69 7.36c-.26.2-.72.2-.98 0l-9.67-7.36h20.35zm-21.17.63 6.14 4.67-6.14 7.88zm.63 13.37 6.3-8.1 2.97 2.26c.62.47 1.57.47 2.19 0l2.97-2.26 6.29 8.1z"
                                                                           fill-rule="evenodd"></path>
                                                                       </svg></div>
-                                                                    <div class="_bc4egv">Continue with email</div>
+                                                                    <div class="flex-1">Continue with email</div>
                                                                     <div class="_fvfsqm"></div>
                                                                   </div>
                                                                 </button></div>
@@ -11064,7 +11064,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                         <div class="_bp34sw">
                                                           <div class="_1x0jb4k">
                                                             <div class="_u92pyy">
-                                                              <div class="_bc4egv" data-testid="experiences-change-dates"><button aria-expanded="false" type="button"
+                                                              <div class="flex-1" data-testid="experiences-change-dates"><button aria-expanded="false" type="button"
                                                                   class="_11eqlma4">
                                                                   <div class="_1athds8">
                                                                     <div>
