--- a/loaders/messages-loader.html
+++ b/loaders/messages-loader.html
@@ -368,7 +368,7 @@
                                                 <h3 class="_bt0ez1">Sep 15, 2022</h3>
                                                 <div class="_1w193fh">
                                                   <div class="_1f6woba">
-                                                    <div class="_bc4egv">
+                                                    <div class="flex-1">
                                                       <div data-testid="base-registry-wrapper-spacing"
                                                         style="margin: 10px 34px 10px 22px;">
                                                         <div class="_x2h9fxk">
@@ -428,7 +428,7 @@
                                                 class="_c015vz2">
                                                 <div class="_1w193fh">
                                                   <div class="_1f6woba">
-                                                    <div class="_bc4egv">
+                                                    <div class="flex-1">
                                                       <div data-testid="base-registry-wrapper-spacing"
                                                         style="margin: 16px 34px 10px 70px;">
                                                         <div class="carousel-slider__item-wrap">
@@ -462,7 +462,7 @@
                                                 class="_c015vz2">
                                                 <div class="_1w193fh">
                                                   <div class="_1f6woba">
-                                                    <div class="_bc4egv">
+                                                    <div class="flex-1">
                                                       <div data-testid="base-registry-wrapper-spacing"
                                                         style="margin: 16px 34px 10px 70px;">
                                                         <div class="carousel-slider__item-wrap">
@@ -523,7 +523,7 @@
                                                 class="_c015vz2">
                                                 <div class="_1w193fh">
                                                   <div class="_1f6woba">
-                                                    <div class="_bc4egv">
+                                                    <div class="flex-1">
                                                       <div data-testid="base-registry-wrapper-spacing"
                                                         style="margin: 16px 34px 10px 70px;">
                                                         <div class="carousel-slider__item-wrap">
@@ -574,7 +574,7 @@
                                                 class="_c015vz2">
                                                 <div class="_1w193fh">
                                                   <div class="_1f6woba">
-                                                    <div class="_bc4egv">
+                                                    <div class="flex-1">
                                                       <div data-testid="base-registry-wrapper-spacing"
                                                         style="margin: 20px 34px 10px 22px;">
                                                         <div class="_x2h9fxk">
@@ -638,7 +638,7 @@
                                                 class="_c015vz2">
                                                 <div class="_1w193fh">
                                                   <div class="_1f6woba">
-                                                    <div class="_bc4egv">
+                                                    <div class="flex-1">
                                                       <div data-testid="base-registry-wrapper-spacing"
                                                         style="margin: 20px 34px 10px 22px;">
                                                         <div class="_x2h9fxk">
@@ -700,7 +700,7 @@
                                                 class="_c015vz2">
                                                 <div class="_1w193fh">
                                                   <div class="_1f6woba">
-                                                    <div class="_bc4egv">
+                                                    <div class="flex-1">
                                                       <div data-testid="base-registry-wrapper-spacing"
                                                         style="margin: 16px 34px 10px 22px;">
                                                         <div class="carousel-slider__item-wrap">
@@ -814,7 +814,7 @@
                                                 <h3 class="_bt0ez1">Aug 16, 2022</h3>
                                                 <div class="_1w193fh">
                                                   <div class="_1f6woba">
-                                                    <div class="_bc4egv">
+                                                    <div class="flex-1">
                                                       <div data-testid="base-registry-wrapper-spacing"
                                                         style="margin: 16px 34px 10px 22px;">
                                                         <div class="carousel-slider__item-wrap">
@@ -851,7 +851,7 @@
                                                 class="_c015vz2">
                                                 <div class="_1w193fh">
                                                   <div class="_1f6woba">
-                                                    <div class="_bc4egv">
+                                                    <div class="flex-1">
                                                       <div data-testid="base-registry-wrapper-spacing"
                                                         style="margin: 20px 34px 10px 22px;">
                                                         <div class="_x2h9fxk">
@@ -1113,7 +1113,7 @@
                                                 <h3 class="_bt0ez1">Jun 12, 2022</h3>
                                                 <div class="_1w193fh">
                                                   <div class="_1f6woba">
-                                                    <div class="_bc4egv">
+                                                    <div class="flex-1">
                                                       <div data-testid="base-registry-wrapper-spacing"
                                                         style="margin: 10px 34px 10px 22px;">
                                                         <div class="_x2h9fxk">
@@ -1198,7 +1198,7 @@
                                                 class="_c015vz2">
                                                 <div class="_1w193fh">
                                                   <div class="_1f6woba">
-                                                    <div class="_bc4egv">
+                                                    <div class="flex-1">
                                                       <div data-testid="base-registry-wrapper-spacing"
                                                         style="margin: 16px 34px 10px 70px;">
                                                         <div class="carousel-slider__item-wrap">
@@ -1371,7 +1371,7 @@
                                                 <h3 class="_bt0ez1">Dec 19, 2021</h3>
                                                 <div class="_1w193fh">
                                                   <div class="_1f6woba">
-                                                    <div class="_bc4egv">
+                                                    <div class="flex-1">
                                                       <div data-testid="base-registry-wrapper-spacing"
                                                         style="margin: 16px 34px 10px 22px;">
                                                         <div class="carousel-slider__item-wrap">
@@ -1408,7 +1408,7 @@
 .Interested in this or your 2b22 unit; staying from Dec 21-23. Thanks!. Sent Dec 19, 2021, 12:10 AM" class="_c015vz2">
                                                 <div class="_1w193fh">
                                                   <div class="_1f6woba">
-                                                    <div class="_bc4egv">
+                                                    <div class="flex-1">
                                                       <div data-testid="base-registry-wrapper-spacing"
                                                         style="margin: 20px 34px 10px 22px;">
                                                         <div class="_x2h9fxk">
@@ -1475,7 +1475,7 @@
                                                 class="_c015vz2">
                                                 <div class="_1w193fh">
                                                   <div class="_1f6woba">
-                                                    <div class="_bc4egv">
+                                                    <div class="flex-1">
                                                       <div data-testid="base-registry-wrapper-spacing"
                                                         style="margin: 16px 34px 10px 22px;">
                                                         <div class="carousel-slider__item-wrap">
@@ -1509,7 +1509,7 @@
                                                 class="_c015vz2">
                                                 <div class="_1w193fh">
                                                   <div class="_1f6woba">
-                                                    <div class="_bc4egv">
+                                                    <div class="flex-1">
                                                       <div data-testid="base-registry-wrapper-spacing"
                                                         style="margin: 20px 34px 0px 22px;">
                                                         <div class="_x2h9fxk">
@@ -1576,7 +1576,7 @@
                                                 <h3 class="_bt0ez1">Dec 20, 2021</h3>
                                                 <div class="_1w193fh">
                                                   <div class="_1f6woba">
-                                                    <div class="_bc4egv">
+                                                    <div class="flex-1">
                                                       <div data-testid="base-registry-wrapper-spacing"
                                                         style="margin: 16px 34px 10px 22px;">
                                                         <div class="_1f4kzn0">
