--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -19614,7 +19614,7 @@
                                               aria-describedby="review_675691390681590266_title" type="button"
                                               class="_15rpys7s">
                                               <span
-                                                class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
+                                                class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
                                                   class="dir dir-ltr">Show more</span><span
                                                   class="atm_gz_1y44olf dir dir-ltr"><svg viewBox="0 0 32 32"
                                                     xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
@@ -27615,7 +27615,7 @@
                           </div>
                           <button type="button" class="_15rpys7s" id="where-modal-read-more">
                             <span
-                              class="flex atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
+                              class="flex d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
                                 class="dir dir-ltr">read more</span><span class="atm_gz_1y44olf dir dir-ltr"><svg
                                   viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                   role="presentation" focusable="false" style="
