--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -8921,7 +8921,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                           more than 48 hours before the start time.</span></div>
                       <div class="mt-6"><a href="/help/article/1593/what-is-the-experiences-cancellation-policy"
                           class="_1sikdxcl"><span
-                            class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
+                            class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
                               class=" dir dir-ltr">Show more</span><span class="atm_gz_1y44olf dir dir-ltr"><svg
                                 viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                 focusable="false"
