--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -14008,7 +14008,7 @@
                                                 class="_15rpys7s"
                                               >
                                                 <span
-                                                  class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
+                                                  class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
                                                   ><span class="dir dir-ltr"
                                                     >Show more</span
                                                   ><span
