--- a/become-a-host/welcome.html
+++ b/become-a-host/welcome.html
@@ -430,7 +430,7 @@
             </header>
             <div class="_1x1fv19">
              <div class="_5xnym8">
-              <div class="_zdxht7" role="group">
+              <div class="w-full" role="group">
                <div class="_kf50tk">
                 <button type="button" class="_15i50to6">
                  <span class="_jr600v">
